infrastructure/team-dev/oci/us/cluster-config/hello.yml
apiVersion: v1
kind: Namespace
metadata:
  name: main
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: main
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 3
  template:
    metadata:
      labels:
        app: hello
    spec:
      volumes:
      - name: hello-html
        configMap:
          name: hello-html
      containers:
      - name: hello
        image: nginx:1.25.4
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: hello-html
      nodeSelector:
        node.wescaleout.cloud/app: "true"
      tolerations:
      - key: node.wescaleout.cloud/app
        operator: Equal
        value: "true"
        effect: NoSchedule
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: hello
---
kind: Service
apiVersion: v1
metadata:
  name: hello
  namespace: main
spec:
  selector:
    app: hello
  ports:
  - name: http
    port: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello
  namespace: main
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - oci-us.team.dev.wescaleout.cloud
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello
  namespace: main
spec:
  hosts:
  - "*"
  gateways:
  - main/hello
  http:
  - route:
    - destination:
        host: hello
        port:
          number: 80
